VFS-9999 Fix truncated string for resources list

--- a/src/app/styles/content-harvesters-spaces.scss
+++ b/src/app/styles/content-harvesters-spaces.scss
@@ -1,6 +1,6 @@
 .content-harvesters-spaces {
   .header-content-container {
-    display: inline-flex;
+    display: flex;
 
     .popover-info-trigger {
       font-size: 2em;
